Initial addition of stopped replica changes visible in SFX

--- a/src/SfxWeb/src/Styles/_tiles.scss
+++ b/src/SfxWeb/src/Styles/_tiles.scss
@@ -68,7 +68,7 @@ $large-window-width: 550px;
   display: grid;
   grid-auto-flow: dense;
   grid-gap: 10px;
-  grid-auto-rows: 150px;
+  grid-auto-rows: minmax(150px, auto);
   margin-bottom: 15px;
 
   @media (min-width: $large-window-width){
